# api/urls.py
@@ -1,6 +1,9 @@
 from django.urls import path
-from .views import HelloView
+from .views import RegisterView, LoginView, ProfileView, ChangePasswordView
 
 urlpatterns = [
-    path("hello/", HelloView.as_view(), name="hello"),
+    path('auth/register', RegisterView.as_view(), name='register'),
+    path('auth/login', LoginView.as_view(), name='login'),
+    path('profile', ProfileView.as_view(), name='profile'),
+    path('password/change', ChangePasswordView.as_view(), name='password-change'),
 ]
